--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,27 @@ services:
       timeout: 5s
       retries: 5
 
-  # MQTT Broker (Mosquitto)
-  mosquitto:
-    image: eclipse-mosquitto:2.0
-    container_name: drone-delivery-mosquitto
+  # MQTT Broker (VerneMQ)
+  vernemq:
+    image: vernemq/vernemq:latest
+    container_name: drone-delivery-vernemq
     restart: always
     ports:
       - '1883:1883'  # MQTT
-      - '9001:9001'  # WebSocket
+      - '8888:8888'  # HTTP Admin API
+      - '9001:9001'  # WebSocket (if enabled)
+    environment:
+      - DOCKER_VERNEMQ_ACCEPT_EULA=yes
+      - DOCKER_VERNEMQ_ALLOW_ANONYMOUS=on
+      - DOCKER_VERNEMQ_MAX_CLIENT_ID_SIZE=100
+      - DOCKER_VERNEMQ_MAX_ONLINE_MESSAGES=10000
+      - DOCKER_VERNEMQ_MAX_OFFLINE_MESSAGES=1000
+      - DOCKER_VERNEMQ_LISTENER__TCP__ALLOWED_PROTOCOL_VERSIONS=3,4,5
+      - DOCKER_VERNEMQ_LISTENER__WS__DEFAULT=9001
+      - DOCKER_VERNEMQ_LOG__CONSOLE__LEVEL=info
     volumes:
-      - ./mosquitto/config:/mosquitto/config
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
-    command: mosquitto -c /mosquitto/config/mosquitto.conf
+      - vernemq_data:/vernemq/data
+      - vernemq_log:/vernemq/log
 
   # Optional: pgAdmin for database management
   pgadmin:
@@ -48,4 +56,6 @@ services:
 
 volumes:
   postgres_data:
+  vernemq_data:
+  vernemq_log:
 
