--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Development Team",
   "private": true,
   "license": "MIT",
-  "type": "module",
+  "type": "commonjs",
   "engines": {
     "node": ">=22.0.0",
     "npm": ">=10.0.0"
