--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,29 +17,25 @@ services:
       timeout: 5s
       retries: 5
 
-  # MQTT Broker (VerneMQ)
-  vernemq:
-    image: vernemq/vernemq:latest
-    container_name: drone-delivery-vernemq
+  # MQTT Broker (EMQX)
+  emqx:
+    image: emqx/emqx:5.3.2
+    container_name: drone-delivery-emqx
     restart: always
     ports:
       - '1883:1883' # MQTT
-      - '8888:8888' # HTTP Admin API
-      - '9001:9001' # WebSocket (if enabled)
+      - '8083:8083' # WebSocket
+      - '8084:8084' # WSS (Secure WebSocket)
+      - '18083:18083' # Dashboard
     environment:
-      - DOCKER_VERNEMQ_ACCEPT_EULA=yes
-      - DOCKER_VERNEMQ_ALLOW_ANONYMOUS=on
-      - DOCKER_VERNEMQ_MAX_CLIENT_ID_SIZE=100
-      - DOCKER_VERNEMQ_MAX_ONLINE_MESSAGES=10000
-      - DOCKER_VERNEMQ_MAX_OFFLINE_MESSAGES=1000
-      - DOCKER_VERNEMQ_LISTENER__TCP__ALLOWED_PROTOCOL_VERSIONS=3,4,5
-      - DOCKER_VERNEMQ_LISTENER__WS__DEFAULT=9001
-      - DOCKER_VERNEMQ_LOG__CONSOLE__LEVEL=info
+      - EMQX_NAME=emqx
+      - EMQX_HOST=127.0.0.1
     volumes:
-      - vernemq_data:/vernemq/data
-      - vernemq_log:/vernemq/log
+      - emqx_data:/opt/emqx/data
+      - emqx_log:/opt/emqx/log
 
 volumes:
   postgres_data:
-  vernemq_data:
+  emqx_data:
+  emqx_log:
   vernemq_log:
